--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,11 @@
 FROM node:22-alpine AS builder
+
+# Install bun
+RUN apk add --no-cache curl
+RUN curl -fsSL https://bun.sh/install | bash
+ENV BUN_INSTALL=/root/.bun
+ENV PATH=$BUN_INSTALL/bin:$PATH
+
 WORKDIR /app
 COPY package.json bun.lock ./
 RUN bun install
