--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:22-alpine AS builder
 
 # Install bun
-RUN apk add --no-cache curl
+RUN apk add --no-cache curl bash
 RUN curl -fsSL https://bun.sh/install | bash
 ENV BUN_INSTALL=/root/.bun
 ENV PATH=$BUN_INSTALL/bin:$PATH
