--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=http://valuecell-server.railway.internal/api/v1
+VITE_API_BASE_URL=https://valuecell-server-production.up.railway.app/api/v1
