fix: 配置 Railway 环境变量正确传递到 Docker 构建
- 更新 Dockerfile 使用 ARG 接收构建时环境变量
- 添加 .dockerignore 防止 .env 文件被复制到镜像
- 更新 .gitignore 忽略所有 .env.* 文件（除了 .env.example）
- 从 Git 中移除 .env.production
- 添加 .env.example 作为配置模板

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,8 @@
-VITE_API_BASE_URL="http://localhost:8000/api/v1"
+# Frontend Environment Variables Example
+# Copy this file to .env.production for local production builds
+# On Railway, set these as environment variables in the service settings
+
+# Backend API URL
+# Local development: http://localhost:8000/api/v1
+# Railway production: https://your-backend.up.railway.app/api/v1
+VITE_API_BASE_URL=http://localhost:8000/api/v1
